--- a/src/react/Languages/pt-PT.json
+++ b/src/react/Languages/pt-PT.json
@@ -96,6 +96,8 @@
     "languages.spanish": "Espanhol",
     "modal.gameStatistics": "Estatísticas do Jogo",
     "modal.newHighScore": "Nova Pontuação Máxima!",
+    "modal.completedGameTitle": "Concluíste o jogo completo!",
+    "btn.newSolitaireGame": "Novo jogo de Solitário",
     "placeholder.username": "Adicione aqui um nome de usuário",
     "sidebar.about": "Sobre",
     "sidebar.configurations": "Configurações",
